# weaver

./: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  VECTORIZATION.md  alternative_vectors.go  bulk_indexer.go  docker-compose.yml  go.mod  go.sum  weaver.go
examples/: path_traversal.go  sql_injection.py  vulnerable_code.c
veccer/: README.md  pyproject.toml
veccer/src/veccer/: main.py
