[project]
name = "veccer"
version = "0.1.0"
description = ""
authors = [
    {name = "Gaurav Gogia",email = "16029099+gaurav-gogia@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "veccer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
